# Aegis

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  aegis.db  authentication_architecture.md  authentication_migration.md  dashboard_api.md  database_architecture.md  entity_relationship_diagram.md  final_acceptance_report.md  health_checks.md  metrics_reference.md  migration_report.md  monitoring_design.md  observability_architecture.md  operations_manual.md  operator_model.md  otel_integration.md  production_checklist.md  pyproject.toml  qa_verification_report.md  rbac_design.md  repository_design.md  requirements.txt  security_model.md
agent/: __init__.py  __main__.py  bridge.py  cli.py  client.py  config.py  env.example  loop.py  mcp_config.py  prompts.py  tools.py
alembic/: env.py
app/: __init__.py  auth_models.py  cache.py  config.py  crypto.py  dependencies.py  forwarder.py  logger.py  main.py  models.py  parser.py  pending_store.py  rpc_parser.py  security.py  tool_policy.py
demo/: broken-deployment.yaml  vanilla-agent-demo.md
deploy/: alibaba_cloud_proof.py  bootstrap-ecs.sh  bootstrap-vultr.sh  docker-compose.yml  env.example  mock_mcp_server.py
frontend/: README.md  package-lock.json  package.json  vite.config.js
scripts/: approve_action.sh
tests/: __init__.py  conftest.py  test_agent_bridge.py  test_agent_config.py  test_agent_loop.py  test_agent_mcp_config.py  test_agent_prompts.py  test_approval_pipeline.py  test_approve_execution.py  test_auth_rbac.py  test_cleanup_scheduler.py  test_config.py  test_crypto.py  (+17 more)
(+30 files in other folders)
